Remove large inset shadow on sections. Remove z-index fix
optimization.
Remove z-index fix. too broad

--- a/public/less/lanyon.less
+++ b/public/less/lanyon.less
@@ -356,22 +356,22 @@ section.container {
     border-radius: 2.5rem;
     box-shadow:
         0px 2px 14px rgba(0, 20, 40, .8),
-        inset 0px 0px 50px rgba(185, 205, 200, .7),
-        inset 0px 0px 180px rgba(205, 225, 230, 1);
+        /*inset 0px 0px 50px rgba(185, 205, 200, .7),
+        inset 0px 0px 180px rgba(205, 225, 230, 1)*/;
     max-width:1200px!important;
 
     @media @phone {
     box-shadow:
         0px 2px 14px rgba(0, 20, 40, .8),
-        inset 0px 0px 5px rgba(185, 205, 200, .7),
-        inset 0px 0px 25px rgba(205, 225, 230, 1);
+        /*inset 0px 0px 5px rgba(185, 205, 200, .7),
+        inset 0px 0px 25px rgba(205, 225, 230, 1)*/;
     }
 
     @media @tablet {
     box-shadow:
         0px 2px 14px rgba(0, 20, 40, .8),
-        inset 0px 0px 5px rgba(185, 205, 200, .7),
-        inset 0px 0px 25px rgba(205, 225, 230, 1);
+        /*inset 0px 0px 5px rgba(185, 205, 200, .7),
+        inset 0px 0px 25px rgba(205, 225, 230, 1)*/;
     }
 }
 
@@ -391,10 +391,6 @@ article {
     position: relative;
     padding: 4%;
     border-radius: 26px;
-    -webkit-transform:translateZ(1px);
-    -moz-transform:translateZ(1px);
-    -o-transform:translateZ(1px);
-    transform:translateZ(1px);
 }
 
 .masonry article {
